--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -2481,6 +2481,13 @@ footer {
     width: 115px;
 }
 
+.masonry-grid .img-holder {
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+    -moz-box-shadow:    0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+    box-shadow:         0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+}
+
 /*Animate css transition delay*/
 .wow__delay-1 {
 	animation-delay: 400ms;
