--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -2643,10 +2643,7 @@ form .blue-btn:hover, form .blue-btn:focus {
     color: lightgray !important;
 }
 
-.innov-subtitle {
-    margin-top: -40px;
-    margin-bottom: 80px;
-}
+
 
 .app-gallery {
     display: flex;
@@ -2655,13 +2652,18 @@ form .blue-btn:hover, form .blue-btn:focus {
     gap: 10px;
 }
 
-.img-after {
+.innov-page .img-after {
     width: 260px;
     height: 525px;
     display: block;
     position: absolute;
     right: 130px;
-    top: 80px;
+    top: 40px;
+}
+
+.innov-page .innov-subtitle {
+    margin-top: -40px;
+    margin-bottom: 100px;
 }
 
 
