Innov page fixes + new content

--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -2666,6 +2666,10 @@ form .blue-btn:hover, form .blue-btn:focus {
     margin-bottom: 100px;
 }
 
+.innov-page .innov-logo {
+    height: 50px;
+}
+
 
 /* ===================================
 Media Queries
