--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -2242,6 +2242,22 @@ aside .arma-stats {
     transform: scale(1.1);
 }
 
+.page-projets .img-holder {
+    border-radius: 10px;
+    margin-top: 30px;
+}
+
+.page-projets .img-client {
+    width:150px;
+    float:left;
+    margin-right:20px;
+    margin-bottom: 40px;
+}
+
+.page-projets .clients b {
+    color: red;
+}
+
 .solution {
     display: flex;
     justify-content: space-between;
